added basic tags and styles

--- a/index.html
+++ b/index.html
@@ -167,11 +167,15 @@ https://templatemo.com/tm-544-comparto
         </div>
       </section> -->
       <section id="services">
-        <h1>My Works</h1>
-        <h2>Project1</h2>
-        <h2>Project2</h2>
-        <h2>Project3</h2>
-        <h2>Project4</h2>
+        <h1 class="works-header">My Works</h1>
+        <h2 class="project">Project1</h2>
+        <p class="project-detail">project1 details</p>
+        <h2 class="project">Project2</h2>
+        <p class="project-detail">project2 details</p>
+        <h2 class="project">Project3</h2>
+        <p class="project-detail">project3 details</p>
+        <h2 class="project">Project4</h2>
+        <p class="project-detail">project4 details</p>
       </section>
       <!-- <section class="tm-bg-color-4 tm-mb-3 tm-gallery-section" id="gallery">
         <div class="tm-gallery-header">
