finish basic computer styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     />
     <link href="fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="css/templatemo-comparto.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/temp.css" />
     <title>Comparto HTML CSS Template</title>
     <!--
 
@@ -24,88 +23,99 @@ https://templatemo.com/tm-544-comparto
   <body>
     <!-- Back to top button -->
     <a id="button"><i class="fas fa-angle-up fa-2x"></i></a>
+
+    <header class="tm-site-header tm-mb-1">
+      <div class="tm-site-name-container tm-bg-color-1">
+        <h1 class="tm-text-white">my logo</h1>
+      </div>
+      <div class="tm-nav-container tm-bg-color-8">
+        <nav class="tm-nav" id="tm-nav">
+          <ul class="tm-nav-items">
+            <li class="tm-nav-item current">
+              <a href="#about" class="tm-nav-link">
+                <!-- <span class="tm-mb-1">.01</span> -->
+                <span>About</span>
+              </a>
+            </li>
+            <li class="tm-nav-item">
+              <a href="#works" class="tm-nav-link">
+                <!-- <span class="tm-mb-1">.02</span> -->
+                <span>Works</span>
+              </a>
+            </li>
+            <li class="tm-nav-item">
+              <a href="#skills" class="tm-nav-link">
+                <!-- <span class="tm-mb-1">.03</span> -->
+                <span>Skills</span>
+              </a>
+            </li>
+            <li class="tm-nav-item">
+              <a href="#contact" class="tm-nav-link">
+                <!-- <span class="tm-nav-text tm-mb-1">.04</span> -->
+                <span class="tm-nav-text">Contact</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="container-fluid">
-      <header class="tm-site-header tm-mb-1">
-        <div class="tm-site-name-container tm-bg-color-1">
-          <h1 class="tm-text-white">Comparto</h1>
-        </div>
-        <div class="tm-nav-container tm-bg-color-8">
-          <nav class="tm-nav" id="tm-nav">
-            <ul>
-              <li class="tm-nav-item current">
-                <a href="#about" class="tm-nav-link">
-                  <span class="tm-mb-1">.01</span>
-                  <span>About</span>
-                </a>
-              </li>
-              <li class="tm-nav-item">
-                <a href="#services" class="tm-nav-link">
-                  <span class="tm-mb-1">.02</span>
-                  <span>Works</span>
-                </a>
-              </li>
-              <li class="tm-nav-item">
-                <a href="#gallery" class="tm-nav-link">
-                  <span class="tm-mb-1">.03</span>
-                  <span>Gallery</span>
-                </a>
-              </li>
-              <li class="tm-nav-item">
-                <a href="#contact" class="tm-nav-link">
-                  <span class="tm-nav-text tm-mb-1">.04</span>
-                  <span class="tm-nav-text">Contact</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </header>
       <section class="title-wrapper">
-        <h1>First Name</h1>
-        <h1>Last Name</h1>
+        <h1>Hello I'm Azar</h1>
+        <h1>Barfipour</h1>
         <h3>Front-End Developer</h3>
       </section>
       <section class="tm-mb-1" id="about">
         <div class="tm-row tm-about-row">
-          <div class="tm-section-1-l">
+          <!-- <div class="tm-section-1-l">
             <img
               src="img/comparto-image-01.jpg"
               alt="About image"
               class="tm-img-responsive"
             />
-          </div>
+          </div> -->
           <article class="tm-section-1-r tm-bg-color-8">
             <h2 class="tm-mb-2 tm-title-color">my, myself and I</h2>
             <p>
-              <a
+              <!-- <a
                 rel="nofollow"
                 href="https://templatemo.com/tm-544-comparto"
                 target="_parent"
                 >Comparto</a
-              >
+              > -->
               is a custom light-weight CSS layout for your website. You can
               easily adapt and use this for your commercial or personal
-              websites. Feel free to use it.
+              websites. Feel free to use it. Lorem ipsum dolor, sit amet
+              consectetur adipisicing elit. Omnis tenetur ut quasi similique
+              accusamus debitis numquam quia inventore qui facilis mollitia
+              recusandae nesciunt veniam, libero necessitatibus exercitationem
+              obcaecati repudiandae facere!
             </p>
             <p>
               You cannot redistribute this template ZIP file in any template
-              collection website. Please
-              <a
+              collection website. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Hic porro ex quam minima, quas dolores
+              reiciendis, nemo tempora quisquam iusto, sunt suscipit incidunt
+              nulla veritatis animi dignissimos inventore quod. Est!
+              <!-- <a
                 rel="nofollow"
                 href="https://templatemo.com/contact"
                 target="_parent"
                 >contact TemplateMo</a
-              >
+              > -->
               if you have any question.
             </p>
             <p>
               Nunc sed gravida elit. Curabitur rutrum elit id lobortis viverra.
-              Fusce at libero dui.
+              Fusce at libero dui. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Eaque nesciunt quidem, vitae, corrupti iure,
+              architecto illum numquam incidunt aliquam inventore mollitia
+              provident labore unde iste vel maiores non magnam ab.
             </p>
 
-            <a href="#services" class="tm-btn tm-btn-1 tm-link-to-services"
+            <!-- <a href="#services" class="tm-btn tm-btn-1 tm-link-to-services"
               >More Detail</a
-            >
+            > -->
           </article>
         </div>
       </section>
@@ -166,7 +176,7 @@ https://templatemo.com/tm-544-comparto
           />
         </div>
       </section> -->
-      <section id="services">
+      <section id="works">
         <h1 class="works-header">My Works</h1>
         <h2 class="project">Project1</h2>
         <p class="project-detail">project1 details</p>
@@ -176,6 +186,62 @@ https://templatemo.com/tm-544-comparto
         <p class="project-detail">project3 details</p>
         <h2 class="project">Project4</h2>
         <p class="project-detail">project4 details</p>
+      </section>
+
+      <section id="skills">
+        <!-- <h2 class="skills-header">Skills</h2> -->
+        <div class="skills-wrapper">
+          <div class="skills-items">
+            <div class="slills_item">
+              <i class="fab fa-html5 skills-item__i"></i>
+              <p class="skills-item__p">HTML5</p>
+            </div>
+            <div class="slills_item">
+              <div class="slills_item">
+                <i class="fab fa-css3 skills-item__i"></i>
+                <p class="skills-item__p">CSS3</p>
+              </div>
+            </div>
+            <div class="slills_item">
+              <div class="slills_item">
+                <i class="fab fa-bootstrap skills-item__i"></i>
+                <p class="skills-item__p">Bootstrap5</p>
+              </div>
+            </div>
+            <div class="slills_item">
+              <div class="slills_item">
+                <i class="fab fa-js-square skills-item__i"></i>
+                <p class="skills-item__p">JavaScript</p>
+              </div>
+            </div>
+            <div class="slills_item">
+              <div class="slills_item">
+                <i class="fab fa-react skills-item__i"></i>
+                <p class="skills-item__p">React.js</p>
+              </div>
+            </div>
+          </div>
+          <div class="skills-items-2">
+            <div class="slills_item">
+              <i class="fas fa-database skills-item__i"></i>
+              <p class="skills-item__p">Postgre SQL</p>
+            </div>
+            <div class="slills_item">
+              <i class="fas fa-database skills-item__i"></i>
+              <p class="skills-item__p">SQL Server</p>
+            </div>
+          </div>
+          <div class="skills-items-2">
+            <div class="slills_item">
+              <i class="fab fa-git-alt skills-item__i"></i>
+              <p class="skills-item__p">git</p>
+            </div>
+            <div class="slills_item">
+              <i class="fab fa-github skills-item__i"></i>
+              <p class="skills-item__p">github</p>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- <section class="tm-bg-color-4 tm-mb-3 tm-gallery-section" id="gallery">
         <div class="tm-gallery-header">
@@ -342,9 +408,19 @@ https://templatemo.com/tm-544-comparto
         </div>
       </section> -->
       <!-- Gallery -->
-      <section id="contact" class="tm-bg-color-5 tm-mb-3">
-        <h2 class="tm-text-white tm-contact-title">.04 Contact Us</h2>
-        <div class="tm-bg-color-white tm-contact-main">
+      <section id="contact" class="contact-wrapper">
+        <h3 class="contact-header">Thank you for visiting my portfolio</h3>
+        <div class="items items1">
+          <a href="#">azar.barfipour@gmail.com</a>
+        </div>
+        <div class="items items2">
+          <a href="#">Resume</a>
+          <a href="#">Linkdin</a>
+          <a href="#">Github</a>
+        </div>
+      </section>
+      <!-- <h2 class="tm-text-white tm-contact-title">Contact Us</h2> -->
+      <!-- <div class="tm-bg-color-white tm-contact-main">
           <div class="map-outer">
             <div class="gmap-canvas">
               <!-- How to change your own map point
@@ -353,7 +429,7 @@ https://templatemo.com/tm-544-comparto
                             3. Click "Share" and choose "Embed map" tab
                             4. Copy only URL and paste it within the src="" field below
                         -->
-              <iframe
+      <!-- <iframe
                 width="100%"
                 height="400"
                 id="gmap-canvas"
@@ -362,10 +438,10 @@ https://templatemo.com/tm-544-comparto
                 scrolling="no"
                 marginheight="0"
                 marginwidth="0"
-              ></iframe>
-            </div>
-          </div>
-          <div class="contact-form-outer">
+              ></iframe> -->
+      <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="contact-form-outer">
             <form
               id="contact-form"
               action=""
@@ -405,8 +481,8 @@ https://templatemo.com/tm-544-comparto
                 </button>
               </div>
             </form>
-          </div>
-          <div class="contact-info-outer">
+          </div> -->
+      <!-- <div class="contact-info-outer">
             <div class="tm-bg-color-6 contact-info">
               <p>
                 Pellentesque egestas odio sed tellus dictum, vel lobortis ante
@@ -420,10 +496,10 @@ https://templatemo.com/tm-544-comparto
                 Email: <a href="mailto:info@company.com">info@company.com</a>
               </p>
             </div>
-          </div>
-        </div>
-      </section>
-      <div class="tm-mb-4 text-center tm-social-s">
+          </div> -->
+      <!-- </div>  -->
+
+      <!-- <div class="tm-mb-4 text-center tm-social-s">
         <a href="https://fb.com/templatemo" class="tm-social-link"
           ><i class="fab fa-facebook tm-social-icon"></i
         ></a>
@@ -436,9 +512,9 @@ https://templatemo.com/tm-544-comparto
         <a href="https://youtube.com" class="tm-social-link"
           ><i class="fab fa-youtube tm-social-icon"></i
         ></a>
-      </div>
+      </div> -->
       <footer class="text-center tm-mb-1">
-        <p>
+        <!-- <p>
           Copyright &copy; 2020 Comparto Studio - Design:
           <a
             rel="nofollow noopener"
@@ -446,7 +522,7 @@ https://templatemo.com/tm-544-comparto
             target="_blank"
             >TemplateMo</a
           >
-        </p>
+        </p> -->
       </footer>
     </div>
     <!-- .container -->
