--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@ tl.fromTo(".type-me", 5, {
   width: "0",
 }, {
   width: "870px", /* same as text-description width */
-  ease:  SteppedEase.config(24)
+  // ease:  SteppedEase.config(24) // this not working on the github pages
 }, 0); 
 
       // text animation
