change text animation

--- a/index.html
+++ b/index.html
@@ -191,8 +191,22 @@ https://templatemo.com/tm-544-comparto
 		</div> -->
 	</div>
   
+  <div class="sp-container">
+    <div class="sp-content">
+      <div class="sp-globe"></div>
+      <h2 class="frame-1">HELLO</h2>
+      <h2 class="frame-2">NICE TO SEE YOU HERE</h2>
+      <h2 class="frame-5">
+        <span>THIS</span>
+        <span>IS</span>
+        <span>AZAR</span>
+      </h2>
+    </div>
+  </div>
+
   <div class="container-fluid">
-    <p class="text-description type-me">Hi, my name is <span>Azar</span></p>
+    <!-- <p class="text-description type-me">Hi, my name is <span>Azar</span></p> -->
+   
       <section class="tm-mb-1" id="about">
         <div class="tm-row tm-about-row">
           <!-- <div class="tm-section-1-l">
